[package]
name = "anvil-env"
version = "0.4.2"
edition = "2021"
authors = ["Alejandro Cabrera <voidreamer@gmail.com>"]
description = "A lightweight environment and configuration manager for VFX/Animation pipelines"
license = "MIT"
repository = "https://github.com/voidreamer/anvil"
keywords = ["vfx", "pipeline", "environment", "rez", "config"]
categories = ["command-line-utilities", "config"]
readme = "README.md"

[[bin]]
name = "anvil"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
directories = "5.0"
dirs = "5.0"
shellexpand = "3.1"
shell-words = "1.1"
which = "6.0"
indexmap = { version = "2.0", features = ["serde"] }
semver = { version = "1.0", features = ["serde"] }
regex = "1.10"

# Cross-platform
cfg-if = "1.0"
tempfile = "3.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
